set(PROJECT blink)
cmake_minimum_required(VERSION 3.13)

include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(${PROJECT})
set(PICO_BOARD pico_w)
pico_sdk_init()
add_executable(${PROJECT} blink.c)
pico_add_extra_outputs(${PROJECT})
target_link_libraries(${PROJECT} pico_stdlib pico_cyw43_arch_none)
pico_enable_stdio_uart(${PROJECT} 0)
pico_enable_stdio_usb(${PROJECT} 1)